--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "commonmark": "^0.25.0",
     "friendly-url": "^1.0.3",
     "gather-scatter": "^1.0.1",
-    "minimisty": "^1.1.1",
     "moment": "^2.12.0",
     "mustache": "^2.2.1",
     "rfile": "^1.0.0",
     "rimraf": "^2.5.2",
-    "through2": "^2.0.1",
-    "through2-spy": "^2.0.0"
+    "through2": "^2.0.1"
   },
   "description": "Configless static blog generator.",
   "devDependencies": {
